--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -1,8 +1,30 @@
 <%- include('../partials/header') %>
 
-</head>
-<body>
+        <div class="jumbotron"><h2>Flights Listing</h2></div>
+        <center>
+        <table>
+                <thead>
+                        <th>Airline</th>
+                        <th>Flight #</th>
+                        <th>Departure Date</th>
+                </thead>
+                <tbody>
+                        <% flights.forEach(function(flight) { %>
+                        <tr>
+                                <td><%= flight.airline %></td>
+                                <td><%= flight.flightNo %></td>
+                                <td><%= flight.departs %></td>
+                        </tr>
+                        <% }) %>
+                </tbody>
+        </table>
+        </center>
+
+
 
         <%- include('../partials/footer') %>
+
+
 </body>
 </html>
+
