--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,3 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    </head>
+</head>
+<body>
+    <nav class="navbar fixed-top navbar-light" style="background-color: #E9ECEF;">
+            <a class="navbar-brand" href="/flights">All Flights</a>
+            <a class="navbar-brand" href="/flights/new">Add Flight</a>
+
+
+          </nav>
