2 / 3 additional user stories added

--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -9,6 +9,8 @@
                         <th>Departure Date</th>
                 </thead>
                 <tbody>
+
+                        <% var flights = flights.sort((a, b) => a.departs - b.departs) %>
                         <% flights.forEach(function(flight) { %>
                         <tr>
                                 <td><%= flight.airline %></td>
