--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,1 @@
-<img src="https://freightbro.com/wp-content/uploads/2018/12/footer-waves.png" style="opacity:0.4;" class="fixed-bottom" width=100% height=200px>
+<div class="fixed-bottom"><center>✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ ✈️ </center></div>
