--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,8 @@
 </head>
 <body>
     <nav class="navbar fixed-top navbar-light" style="background-color: #E9ECEF;">
-            <a class="navbar-brand" href="/flights">All Flights</a>
-            <a class="navbar-brand" href="/flights/new">Add Flight</a>
+            <a class="navbar-brand" href="/flights">All ✈️s</a>
+            <a class="navbar-brand" href="/flights/new">+ ✈️</a>
 
 
           </nav>
